Fixed spacing

--- a/Home/Styles.css
+++ b/Home/Styles.css
@@ -227,6 +227,7 @@ div .cart svg {
     flex-wrap: wrap;
     width: 100%;
     justify-content: center;
+    padding-bottom: 20px;
 }
 
 .popular_games h2{
